step 18, b 2